force-app/main/default/objects/Convsta_Evaluation__c/Convsta_Evaluation__c.object-meta.xml
<CustomObject>
    <description>Informations d&apos;une évaluation concernant un stage</description>
    <label>Evaluation</label>
    <nameField>
        <label>Evaluation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Evaluations</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>