force-app/main/default/objects/Convsta_Evaluation__c/fields/CanEditReadError__c.field-meta.xml
<CustomField>
    <fullName>CanEditReadError__c</fullName>
    <formula>IF( 	TEXT($User.UserType) = &apos;Guest&apos;, 
	IF(
		ValidTo__c&lt;TODAY(),
		&apos;Expired&apos;,
		IF(
			ValidFrom__c&lt;=TODAY(),
			&apos;Edit&apos;,
			&apos;Read&apos;)
		), 
	IF(TEXT($User.UserType) =&apos;Standard&apos;,&apos;Edit&apos;,&apos;Read&apos;)
	
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CanEditReadError</label>
    <type>Text</type>
</CustomField>