force-app/main/default/objects/Convsta_Evaluation__c/fields/Circonstances_du_stage__c.field-meta.xml
<CustomField>
    <fullName>Circonstances_du_stage__c</fullName>
    <label>Circonstances du stage</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>