force-app/main/default/objects/Convsta_Evaluation__c/fields/Cle_cryptee__c.field-meta.xml
<CustomField>
    <fullName>Cle_cryptee__c</fullName>
    <label>Clé cryptée</label>
    <length>255</length>
    <type>Text</type>
</CustomField>