force-app/main/default/objects/Convsta_Evaluation__c/fields/Commentaire_Comportementales__c.field-meta.xml
<CustomField>
    <fullName>Commentaire_Comportementales__c</fullName>
    <label>Commentaire Comportementales</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>