force-app/main/default/objects/Convsta_Evaluation__c/fields/Commentaire_EarlyMaker__c.field-meta.xml
<CustomField>
    <fullName>Commentaire_EarlyMaker__c</fullName>
    <label>Commentaire EarlyMaker</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>