force-app/main/default/objects/Convsta_Evaluation__c/fields/Commentaire_global__c.field-meta.xml
<CustomField>
    <fullName>Commentaire_global__c</fullName>
    <label>Commentaire global</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>