force-app/main/default/objects/Convsta_Evaluation__c/fields/Commentaire_Metiers__c.field-meta.xml
<CustomField>
    <fullName>Commentaire_Metiers__c</fullName>
    <label>Commentaire Métiers</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>