force-app/main/default/objects/Convsta_Evaluation__c/fields/Date_Reception_Evalutation__c.field-meta.xml
<CustomField>
    <fullName>Date_Reception_Evalutation__c</fullName>
    <description>Indique la date à laquelle l&apos;évaluation a été chargé dans Salesforce</description>
    <label>Date de réception de l&apos;évalutation</label>
    <type>DateTime</type>
</CustomField>