force-app/main/default/objects/Convsta_Evaluation__c/fields/DateEndStage__c.field-meta.xml
<CustomField>
    <fullName>DateEndStage__c</fullName>
    <description>Date de la fin du stage</description>
    <label>Date de fin de stage</label>
    <type>Date</type>
</CustomField>