force-app/main/default/objects/Convsta_Evaluation__c/fields/Demande__c.field-meta.xml
<CustomField>
    <fullName>Demande__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Demande</label>
    <referenceTo>Case</referenceTo>
    <relationshipName>Convsta_Evaluations</relationshipName>
    <type>Lookup</type>
</CustomField>