force-app/main/default/objects/Convsta_Evaluation__c/fields/Envoyer_nouveau_lien__c.field-meta.xml
<CustomField>
    <fullName>Envoyer_nouveau_lien__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Permet d&apos;envoyer un nouveau lien vers l&apos;évaluation, par exemple si l&apos;évaluateur souhaite modifier l&apos;évaluation</description>
    <label>Envoyer un nouveau lien</label>
    <type>Checkbox</type>
</CustomField>