force-app/main/default/objects/Convsta_Evaluation__c/fields/Erreur_dans_Cursus__c.field-meta.xml
<CustomField>
    <fullName>Erreur_dans_Cursus__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Erreur dans Cursus</label>
    <type>Checkbox</type>
</CustomField>