force-app/main/default/objects/Convsta_Evaluation__c/fields/Etudiant__c.field-meta.xml
<CustomField>
    <fullName>Etudiant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Etudiant</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Convsta_Evaluation_Etudiant</relationshipName>
    <type>Lookup</type>
</CustomField>