force-app/main/default/objects/Convsta_Evaluation__c/fields/EvalNumber__c.field-meta.xml
<CustomField>
    <fullName>EvalNumber__c</fullName>
    <displayFormat>{00000000}</displayFormat>
    <externalId>true</externalId>
    <label>EvalNumber</label>
    <type>AutoNumber</type>
</CustomField>