force-app/main/default/objects/Convsta_Evaluation__c/fields/Evaluateur__c.field-meta.xml
<CustomField>
    <fullName>Evaluateur__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Evaluateur</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Convsta_Evaluation_Evaluateur</relationshipName>
    <type>Lookup</type>
</CustomField>