force-app/main/default/objects/Convsta_Evaluation__c/fields/Evaluation_echue__c.field-meta.xml
<CustomField>
    <fullName>Evaluation_echue__c</fullName>
    <description>Permet de déterminer si l&apos;évaluation est échue</description>
    <formula>AND(ISPICKVAL(Statut__c, &quot;Envoyée&quot;) ||
				ISPICKVAL(Statut__c, &quot;En attente d&apos;évaluation&quot;) || 
					ISPICKVAL(Statut__c, &quot;Relancée&quot;),
				  ValidTo__c  &lt;  TODAY())</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Permet de déterminer si l&apos;évaluation est échue</inlineHelpText>
    <label>Evaluation echue</label>
    <type>Checkbox</type>
</CustomField>