force-app/main/default/objects/Convsta_Evaluation__c/fields/Famille_competences_metier__c.field-meta.xml
<CustomField>
    <fullName>Famille_competences_metier__c</fullName>
    <label>Famille compétences métier</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Finance d&apos;entreprise, comptabilité, contrôle de gestion</fullName>
            </value>
            <value>
                <fullName>Ressources Humaines</fullName>
            </value>
            <value>
                <fullName>Direction Générale</fullName>
            </value>
            <value>
                <fullName>Financement, Investissements et Assurances</fullName>
            </value>
            <value>
                <fullName>Marketing et Communication</fullName>
            </value>
            <value>
                <fullName>Production et QHSE</fullName>
            </value>
            <value>
                <fullName>Audit et Conseil</fullName>
            </value>
            <value>
                <fullName>Développement commercial et relations clients</fullName>
            </value>
            <value>
                <fullName>Digital et data</fullName>
            </value>
            <value>
                <fullName>Achats</fullName>
            </value>
            <value>
                <fullName>Informatique</fullName>
            </value>
            <value>
                <fullName>Supply Chain Management</fullName>
            </value>
            <value>
                <fullName>Juridique</fullName>
            </value>
            <value>
                <fullName>a</fullName>
                <isActive>false</isActive>
                <label>a</label>
            </value>
            <value>
                <fullName>b</fullName>
                <isActive>false</isActive>
                <label>b</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>