force-app/main/default/objects/Convsta_Evaluation__c/fields/Form_Entreprise_Etudiant__c.field-meta.xml
<CustomField>
    <fullName>Form_Entreprise_Etudiant__c</fullName>
    <formula>Demande__r.Convsta_Entreprise_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Form_Entreprise_Etudiant</label>
    <type>Text</type>
</CustomField>