force-app/main/default/objects/Convsta_Evaluation__c/fields/Form_Function_Tuteur__c.field-meta.xml
<CustomField>
    <fullName>Form_Function_Tuteur__c</fullName>
    <description>Fonction du tuteur (Contact associé à l&apos;évaluation).</description>
    <formula>Evaluateur__r.Title</formula>
    <inlineHelpText>Fonction de l&apos;évaluateur</inlineHelpText>
    <label>Form_Function_Tuteur</label>
    <type>Text</type>
</CustomField>