force-app/main/default/objects/Convsta_Evaluation__c/fields/Form_Mail_Tuteur__c.field-meta.xml
<CustomField>
    <fullName>Form_Mail_Tuteur__c</fullName>
    <formula>Evaluateur__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Form_Mail_Tuteur</label>
    <type>Text</type>
</CustomField>