force-app/main/default/objects/Convsta_Evaluation__c/fields/Lien_pour_evaluation__c.field-meta.xml
<CustomField>
    <fullName>Lien_pour_evaluation__c</fullName>
    <formula>HYPERLINK(
 evalLink__c , &quot;Consulter la page d&apos;évaluation&quot;	)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lien pour évaluation</label>
    <type>Text</type>
</CustomField>