force-app/main/default/objects/Convsta_Evaluation__c/fields/Ne_pas_basculer_la_note_dans_la_Scola__c.field-meta.xml
<CustomField>
    <fullName>Ne_pas_basculer_la_note_dans_la_Scola__c</fullName>
    <formula>Demande__r.Convsta_Table_des_Regles_Experience_Pro__r.Ne_pas_basculer_la_note_dans_la_Scola__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ne pas basculer la note dans la Scola</label>
    <type>Checkbox</type>
</CustomField>