force-app/main/default/objects/Convsta_Evaluation__c/fields/Note_globale__c.field-meta.xml
<CustomField>
    <fullName>Note_globale__c</fullName>
    <description>La note globale obtenue par l&apos;étudiant</description>
    <inlineHelpText>La note globale obtenue par l&apos;étudiant</inlineHelpText>
    <label>Note globale</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>