force-app/main/default/objects/Convsta_Evaluation__c/fields/Raison_changement_de_note__c.field-meta.xml
<CustomField>
    <fullName>Raison_changement_de_note__c</fullName>
    <label>Raison changement de note</label>
    <type>TextArea</type>
</CustomField>