force-app/main/default/objects/Convsta_Evaluation__c/fields/Responsable_Pedagogique__c.field-meta.xml
<CustomField>
    <fullName>Responsable_Pedagogique__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Responsable Pédagogique</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Evaluations</relationshipName>
    <type>Lookup</type>
</CustomField>