force-app/main/default/objects/Convsta_Evaluation__c/fields/Saisie_dans_cursus__c.field-meta.xml
<CustomField>
    <fullName>Saisie_dans_cursus__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Saisie dans cursus</label>
    <type>Checkbox</type>
</CustomField>