force-app/main/default/objects/Convsta_Evaluation__c/fields/Statut__c.field-meta.xml
<CustomField>
    <fullName>Statut__c</fullName>
    <label>Statut</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Envoyée</fullName>
            </value>
            <value>
                <fullName>En attente d&apos;évaluation</fullName>
            </value>
            <value>
                <fullName>Relancée</fullName>
            </value>
            <value>
                <fullName>Évaluée</fullName>
            </value>
            <value>
                <fullName>Non-évaluable</fullName>
            </value>
            <value>
                <fullName>Expirée</fullName>
            </value>
            <value>
                <fullName>Evaluation manuelle</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>