force-app/main/default/objects/Convsta_Evaluation__c/fields/telecharger_l_evaluation__c.field-meta.xml
<CustomField>
    <fullName>telecharger_l_evaluation__c</fullName>
    <formula>IF( ISBLANK(Demande__r.Convsta_EvaluationDocumentId__c ),
			HYPERLINK(&apos;/apex/Convsta_GenerationEvaluation?evalId=&apos;+Id, $Label.convsta_dowload_evaluation, &apos;_blank&apos;),
			 HYPERLINK(&apos;/&apos;+Demande__r.Convsta_EvaluationDocumentId__c, $Label.convsta_dowload_evaluation , &apos;_blank&apos;)   
			)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>télécharger l&apos;évaluation</label>
    <type>Text</type>
</CustomField>