force-app/main/default/objects/Convsta_Evaluation__c/listViews/Copie_de_Evaluation_MS_SIM.listView-meta.xml
<ListView>
    <fullName>Copie_de_Evaluation_MS_SIM</fullName>
    <columns>NAME</columns>
    <columns>DateEndStage__c</columns>
    <columns>Note_globale__c</columns>
    <columns>Saisie_dans_cursus__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Responsable_Pedagogique__c</field>
        <operation>contains</operation>
        <value>HAINCOURT</value>
    </filters>
    <filters>
        <field>Statut__c</field>
        <operation>equals</operation>
        <value>Évaluée,Non-évaluable</value>
    </filters>
    <label>Evaluation MS  SIM</label>
</ListView>