force-app/main/default/objects/Convsta_Evaluation__c/listViews/Demande_d_valuation_liens_expirer.listView-meta.xml
<ListView>
    <fullName>Demande_d_valuation_liens_expirer</fullName>
    <columns>NAME</columns>
    <columns>Demande__c</columns>
    <columns>Etudiant__c</columns>
    <columns>DateEndStage__c</columns>
    <columns>ValidTo__c</columns>
    <columns>Statut__c</columns>
    <columns>Responsable_Pedagogique__c</columns>
    <columns>Evaluateur__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Statut__c</field>
        <operation>equals</operation>
        <value>Relancée,Expirée</value>
    </filters>
    <filters>
        <field>ValidTo__c</field>
        <operation>lessOrEqual</operation>
        <value>TODAY</value>
    </filters>
    <label>Demande d&apos;évaluation liens à expirer</label>
</ListView>