force-app/main/default/objects/Convsta_Evaluation__c/listViews/Evaluation_en_Attente.listView-meta.xml
<ListView>
    <fullName>Evaluation_en_Attente</fullName>
    <columns>Etudiant__c</columns>
    <columns>NAME</columns>
    <columns>Evaluateur__c</columns>
    <columns>ValidTo__c</columns>
    <columns>DateEndStage__c</columns>
    <columns>Responsable_Pedagogique__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Statut__c</field>
        <operation>equals</operation>
        <value>En attente d&apos;évaluation,Relancée</value>
    </filters>
    <label>Évaluation  en Attente</label>
</ListView>