force-app/main/default/objects/Convsta_Evaluation__c/listViews/Evaluation_MSc_in_HMDI.listView-meta.xml
<ListView>
    <fullName>Evaluation_MSc_in_HMDI</fullName>
    <columns>NAME</columns>
    <columns>DateEndStage__c</columns>
    <columns>Note_globale__c</columns>
    <columns>Saisie_dans_cursus__c</columns>
    <columns>Statut__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Responsable_Pedagogique__c</field>
        <operation>contains</operation>
        <value>TRAVIESO</value>
    </filters>
    <filters>
        <field>Statut__c</field>
        <operation>equals</operation>
        <value>Évaluée,Non-évaluable</value>
    </filters>
    <label>Evaluation MSc in HMDI</label>
</ListView>